dashboard/istio-components/expose-istio-kiali-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      # number: 80
      number: 15029
      name: http-kiali
      protocol: HTTP
    hosts:
    # - "kiali.kfs.pydemia.org"
    - "*"
  # - port:
  #     number: 15029
  #     name: http-kiali
  #     protocol: HTTP
  #   hosts:
  #   - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - kiali-gateway
  http:
  - match:
    # - method:
    #     exact: GET
    - uri:
        prefix: /istio/kiali/
      port: 15029
    rewrite:
      # Rewrite the original host header to the host header of Search service
      # in order to redirect requests to Search service.
      authority: kiali.istio-system.svc.cluster.local
      uri: /istio/kiali
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
  - match:
    - port: 15029
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali
  trafficPolicy:
    tls:
      mode: DISABLE
---
